# utility-divergent-tree

./: .gitignore  METHODS_EXPLANATION.txt  README.md  pyproject.toml  requirements-exact.txt  requirements.txt
examples/: basic.py  simulate.py
simulations/binary_comparison/: binary_data_generator.py  simulate_binary.py  test_binary_generator.py
simulations/comparison/: __init__.py  comparison_helper.py  data_generator.py  example.py  example_twostep.py  random_data_generator.py  random_data_generator_v2.py  simulate.py  simulate_random.py  test_data_generator.py  test_random_data_generator.py
simulations/free_trial/: config.py  example.py  helper.py  synthetic_data_generator.py
src/divtree/: __init__.py  tree.py  tune.py  viz.py
src/divtree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/twostepdivtree/: __init__.py  tree.py
tests/Trial/: datagenerating.py  helper.py  segmentation.py  test.py
