[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "divtree"
version = "0.1.0"
description = "Recursive partitioning to audit divergence between firm-side and consumer-side treatment effects."
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "optuna>=3.2",
]

[project.urls]
Homepage = "https://github.com/yourname/divergence-tree"
