[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "divtree"
version = "0.1.0"
description = "Recursive partitioning to audit divergence between firm-side and consumer-side treatment effects."
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.0",
    "optuna>=4.4.0",
    "scikit-learn>=1.6.0",
    "econml>=0.16.0",
    "scipy>=1.16.0",
    "joblib>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yourname/divergence-tree"
