[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "divtree"
version = "0.1.0"
description = "Recursive partitioning to audit divergence between firm-side and consumer-side treatment effects."
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "optuna>=3.2.0,<5.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "joblib>=1.3.0,<2.0.0",
    "econml>=0.14.0,<0.17.0",
    "lightgbm>=4.0.0,<5.0.0",
    "shap>=0.40.0,<0.50.0",
    "sparse>=0.14.0,<0.18.0",
    "statsmodels>=0.14.0,<0.15.0",
]

[project.urls]
Homepage = "https://github.com/yourname/divergence-tree"
